# euvsvirus-healthyways

./: .gitignore  README.md  pyproject.toml
data/vbz_predictions/interim/: nn_bins_locations.pkl
healthyways/: __main__.py  maps_api.py  path_evaluation.py  slackbot.py
healthyways/vbz_predictions/: build_features.py  clean_data.py  download_data.py  predict_model.py  train_models.py
models/vbz_predictions/: model_nn_bins.h5
notenbooks/: VBZ Data Experiments.ipynb
tests/: test_healthyways.py
